--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1340,7 +1340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En la descripcion de los datos, las categorias PoolQC, MiscFeature, Alley, Fence, MasVnrType, FireplaceQu  en las que hay variables tipo Nan es porque no contienen estas propiedades (quality pool or fence), por lo que haremos sera llenarlas con la palabra 'None'"
+    "In the data description, the categories PoolQC, MiscFeature, Alley, Fence, MasVnrType, FireplaceQu in which there are variables type Nan is because they do not contain these properties (quality pool or fence), so we will fill them with the word 'None'."
    ]
   },
   {
@@ -10070,6 +10070,229 @@
    "source": [
     "download_output(lr_pred, 'submission_lr.csv')\n",
     "download_output(rf_pred, 'submission_rf.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparacion de los modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SalePrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1461</td>\n",
+       "      <td>117183.731835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1462</td>\n",
+       "      <td>152447.980910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1463</td>\n",
+       "      <td>167394.058101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1464</td>\n",
+       "      <td>188972.837798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1465</td>\n",
+       "      <td>195799.562265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1466</td>\n",
+       "      <td>175193.179223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1467</td>\n",
+       "      <td>190965.288039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1468</td>\n",
+       "      <td>166110.582355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1469</td>\n",
+       "      <td>198678.139852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1470</td>\n",
+       "      <td>119291.911850</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ID      SalePrice\n",
+       "0  1461  117183.731835\n",
+       "1  1462  152447.980910\n",
+       "2  1463  167394.058101\n",
+       "3  1464  188972.837798\n",
+       "4  1465  195799.562265\n",
+       "5  1466  175193.179223\n",
+       "6  1467  190965.288039\n",
+       "7  1468  166110.582355\n",
+       "8  1469  198678.139852\n",
+       "9  1470  119291.911850"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('submission_lr.csv').head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SalePrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1461</td>\n",
+       "      <td>126284.789128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1462</td>\n",
+       "      <td>149622.481441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1463</td>\n",
+       "      <td>185886.658163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1464</td>\n",
+       "      <td>185992.949068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1465</td>\n",
+       "      <td>210718.270495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1466</td>\n",
+       "      <td>178291.036414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1467</td>\n",
+       "      <td>163638.247246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1468</td>\n",
+       "      <td>177239.251351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1469</td>\n",
+       "      <td>187110.593445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1470</td>\n",
+       "      <td>127429.305575</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ID      SalePrice\n",
+       "0  1461  126284.789128\n",
+       "1  1462  149622.481441\n",
+       "2  1463  185886.658163\n",
+       "3  1464  185992.949068\n",
+       "4  1465  210718.270495\n",
+       "5  1466  178291.036414\n",
+       "6  1467  163638.247246\n",
+       "7  1468  177239.251351\n",
+       "8  1469  187110.593445\n",
+       "9  1470  127429.305575"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('submission_rf.csv').head(10)"
    ]
   }
  ],
